--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/Ka-link/e2#readme",
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "express": "^4.13.3",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-nodemon": "^2.2.1",
-    "nib": "^1.1.2"
+    "mongoose": "^4.11.5",
+    "morgan": "~1.5.0",
+    "nib": "^1.1.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^1.2.1"
   }
 }
