--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "e2",
+  "name": "examen",
   "version": "1.0.0",
-  "description": "exam",
-  "main": "index.html",
+  "description": "",
+  "main": "./api/server.js",
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ka-link/e2.git"
+    "url": "git+https://github.com/Ka-link/kaExam.git"
   },
   "author": "Kaleen",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Ka-link/e2/issues"
+    "url": "https://github.com/Ka-link/kaExam/issues"
   },
-  "homepage": "https://github.com/Ka-link/e2#readme",
+  "homepage": "https://github.com/Ka-link/kaExam#readme",
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
@@ -28,4 +32,5 @@
     "passport": "^0.3.2",
     "passport-jwt": "^1.2.1"
   }
+
 }
